--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -31,7 +31,7 @@
                 frontend: {
                     ws_is_connected: signal(false),
                     //console_log_ns_passlist: signal(false),
-                    console_log_ns_faillist: signal(["ACTOR_PLAYER", "ACTOR_PLAYER_RELATIONS", "VFRMGR"]),
+                    console_log_ns_faillist: signal(["ACTOR_PLAYER", "VFRMGR"]),
                 },
 
                 // our state ^ is freely writable, but the below need to command+receive their mutations
