sketchy actor selection shortcuts, on spawn is 1.2.1 only

--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -12,26 +12,33 @@
 
     class WSTransport {
         static websock = undefined;
+        static _new_actor_signal_group() {
+            return {
+                pos32: signal([0.0, 0.0, 0.0]),
+                pos64: signal([0.0, 0.0, 0.0]),
+                rot: signal([0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]),
+                rot_physics: signal([0.0, 0.0, 0.0, 0.0]),
+                vel_frame: signal([0.0, 0.0, 0.0]), // per-frame calculated velocity, unused
+                physics_vel: signal([0.0, 0.0, 0.0]),
+                physics_ang_vel: signal([0.0, 0.0, 0.0]),
+                inertia: signal([0.0, 0.0, 0.0, 0.0]),
+            };
+        };
         static signals = {
             // TODO allow components to call into here, to create new signal groups on the fly, to observe+route changes from incoming logs (eg subscribe to currently selected actors)
             // XXX dont pass signals into props/etc, they appear to leak? values are fine
             actor: {
-                Player: {
-                    pos32: signal([0.0, 0.0, 0.0]),
-                    pos64: signal([0.0, 0.0, 0.0]),
-                    rot: signal([0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]),
-                    rot_physics: signal([0.0, 0.0, 0.0, 0.0]),
-                    vel_frame: signal([0.0, 0.0, 0.0]), // per-frame calculated velocity, unused
-                    physics_vel: signal([0.0, 0.0, 0.0]),
-                    physics_ang_vel: signal([0.0, 0.0, 0.0]),
-                    inertia: signal([0.0, 0.0, 0.0, 0.0]),
-                },
+                Player: this._new_actor_signal_group(),
+                ACTOR_SLOT_1: this._new_actor_signal_group(),
+                ACTOR_SLOT_2: this._new_actor_signal_group(),
+                ACTOR_SLOT_3: this._new_actor_signal_group(),
+                _XXX_tracked_aselectors: signal(["Player", "ACTOR_SLOT_1", "ACTOR_SLOT_2", "ACTOR_SLOT_3"]), // client side only, mod side holds this separately for now until selector format/references/etc are better planned. we just juggle some hardcoded names here for now
             },
             config: {
                 frontend: {
                     ws_is_connected: signal(false),
                     //console_log_ns_passlist: signal(false),
-                    console_log_ns_faillist: signal(["ACTOR_PLAYER", "VFRMGR"]),
+                    console_log_ns_faillist: signal(["ACTOR_PLAYER", "ACTOR_SLOT_1", "ACTOR_SLOT_2", "ACTOR_SLOT_3", "VFRMGR"]),
                 },
 
                 // our state ^ is freely writable, but the below need to command+receive their mutations
@@ -92,16 +99,22 @@
             }
 
             // Publish updates into ui components
-            if (ns == "ACTOR_PLAYER") {
+            // TODO is a special player ns useful? should we keep it to split common actor info away from any Player-specifics?
+            let aselector = "";
+            if (ns == "ACTOR_PLAYER") { aselector = "Player"; }
+            else if (ns == "ACTOR_SLOT_1") { aselector = "ACTOR_SLOT_1"; }
+            else if (ns == "ACTOR_SLOT_2") { aselector = "ACTOR_SLOT_2"; }
+            else if (ns == "ACTOR_SLOT_3") { aselector = "ACTOR_SLOT_3"; }
+            if (aselector) {
                 // XXX just iterate over these?
-                if ("pos32"     in payload) { WSTransport.signals.actor.Player.pos32.value     = payload.pos32; }
-                if ("pos64"     in payload) { WSTransport.signals.actor.Player.pos64.value     = payload.pos64; }
-                if ("rot"       in payload) { WSTransport.signals.actor.Player.rot.value       = payload.rot; }
-                if ("rot_physics" in payload) { WSTransport.signals.actor.Player.rot_physics.value = payload.rot_physics; }
-                //if ("vel_frame" in payload) { WSTransport.signals.actor.Player.vel_frame.value = payload.vel_frame; }
-                if ("physics_vel" in payload) { WSTransport.signals.actor.Player.physics_vel.value = payload.physics_vel; }
-                if ("physics_ang_vel" in payload) { WSTransport.signals.actor.Player.physics_ang_vel.value = payload.physics_ang_vel; }
-                if ("inertia" in payload) { WSTransport.signals.actor.Player.inertia.value = payload.inertia; }
+                if ("pos32"     in payload) { WSTransport.signals.actor[aselector].pos32.value     = payload.pos32; }
+                if ("pos64"     in payload) { WSTransport.signals.actor[aselector].pos64.value     = payload.pos64; }
+                if ("rot"       in payload) { WSTransport.signals.actor[aselector].rot.value       = payload.rot; }
+                if ("rot_physics" in payload) { WSTransport.signals.actor[aselector].rot_physics.value = payload.rot_physics; }
+                //if ("vel_frame" in payload) { WSTransport.signals.actor[aselector].vel_frame.value = payload.vel_frame; }
+                if ("physics_vel" in payload) { WSTransport.signals.actor[aselector].physics_vel.value = payload.physics_vel; }
+                if ("physics_ang_vel" in payload) { WSTransport.signals.actor[aselector].physics_ang_vel.value = payload.physics_ang_vel; }
+                if ("inertia" in payload) { WSTransport.signals.actor[aselector].inertia.value = payload.inertia; }
 
             }
             else if (ns == "BACKEND_CONFIG") {
@@ -178,6 +191,7 @@
             this.state = {idk: 420};
             this.bumper_increment_ref = createRef();
             this.savestate_textbox_ref = createRef();
+            this._XXX_aselector_finder_relation_parent_i = createRef();
         }
 
         do_paste_coords(aselector_named, dest) {
@@ -251,17 +265,37 @@
             this.savestate_textbox_ref.current.value = `${v[0]}, ${v[1]}, ${v[2]}`;
         }
 
-        render({aselector_named}, state) {
+        do_subscribe_slot(_XXX_aselector_i, subscribe_options) {
+            // TODO add+remove actor selector slots on demand instead of all this? otoh keeping these "static" makes it ez to reason 1:1::js:cpp
+            const action = subscribe_options.action;
+            let action_arg = 0x0;
+            if (action == "null") {
+            } else if (action == "spawn") {
+            } else if (action == "next_relation_of_i") {
+                action_arg = parseInt(this._XXX_aselector_finder_relation_parent_i.current.value || 0);
+            }
+            fetch(`/backend/actor/select_slot?uniq_id=${WSTransport.make_uniq_id()} ${_XXX_aselector_i} ${subscribe_options.action} ${action_arg}`, {method: "post"});
+        }
+
+        render({aselector_named, _XXX_aselector_i}, state) {
             // TODO actor selector: spawn one of these toolsets scoped to some actor, direct the mod to publish its data, cleanup when actor is destroyed.
             // TODO more generally: we get a handle to the actor from the mod (be it name/index/pointer/whatever) which is used to ^ request+identify subscriptions, and used as a handle for savestate pasting etc.
             //                      symbolic handles too -- eg names/singletons like Player, relative traversals such as RelationOf(Player, "Weapon_Lsword_020"), static create-if-missing named test actors, ...
 
+            //if (WSTransport.signals.actor._XXX_tracked_aselectors[_XXX_aselector_i] != aselector_named) { debugger; } // assert
             const asig = WSTransport.signals.actor[aselector_named];
             const compass_rot = [asig.rot.value[0], asig.rot.value[2]];
 
             return html`
                 <section class="toolset_actor_inspector">
-                    <div class="actor_selector">Actor: ${aselector_named}</div>
+                    <div class="actor_selector_current">Actor: ${aselector_named}</div>
+                    <div class="actor_selector_options">
+                        Select:
+                        <button onClick=${ () => this.do_subscribe_slot(_XXX_aselector_i, {action: "null"}) } class="pushbutton">null</button>
+                        <button onClick=${ () => this.do_subscribe_slot(_XXX_aselector_i, {action: "spawn"}) } class="pushbutton">spawn</button>
+                        <button onClick=${ () => this.do_subscribe_slot(_XXX_aselector_i, {action: "next_relation_of_i"}) } class="pushbutton">on rel</button>
+                        <input type="number" placeholder="0" size="2" min="0" max="3" ref=${this._XXX_aselector_finder_relation_parent_i} size=2 />
+                    </div>
                     <div class="actor_pos32_ui">
                         <${ReadoutVec3} label="pos32 (ui)\xa0" value=${VecUtil.engine_to_ui(asig.pos32.value)} vecComponentPattern=${VecComponentPatterns.XZY} />
                     </div>
@@ -331,7 +365,7 @@
     function MainToolbox() {
         return html`
         <div class="toolbox_main">
-            <${ActorInspector} aselector_named="Player" />
+            ${WSTransport.signals.actor._XXX_tracked_aselectors.value.map((asel, asel_i) => html`<${ActorInspector} aselector_named=${asel} _XXX_aselector_i=${asel_i} />`)}
             <${ConnectionToolset} />
         </div>
         `;
