--- a/frontend/index.html
+++ b/frontend/index.html
@@ -288,6 +288,36 @@
         }
     };
 
+    class ExecScript extends Component {
+        constructor() {
+            super();
+            this.script_text_ref = createRef();
+            this.use_implicit_main_ref = createRef();
+        }
+
+        do_exec() {
+            let script_text = this.script_text_ref.current.value;
+            if (this.use_implicit_main_ref.current.checked) {
+                script_text = `void main() { ${script_text} }`;
+            }
+            WSTransport.send({execScriptString: script_text});
+        }
+
+        render(props, state) {
+            // TODO local file save/load, copy, ...
+            // TODO ctrl+enter do_exec()
+            return html`
+                <div class="execscript">
+                    <br/>AngelScript <button onClick=${ () => this.do_exec() } class="pushbutton">exec</button>
+                    <label title="Automatically wrap input into void main() {...} entry point" for="execscript_use_implicit_main">implicit main:</label>
+                    <input type="checkbox" id="execscript_use_implicit_main" ref=${this.use_implicit_main_ref} checked />
+                    <br/>
+                    <textarea placeholder="trashPrintHookLimits();\ntrashPrintInt(420);" ref=${this.script_text_ref}></textarea>
+                </div>
+            `;
+        }
+    };
+
     class ActorInspector extends Component {
         constructor() {
             super();
@@ -479,6 +509,7 @@
                 </div>
                 <${MemSearch} />
                 <${QuickDumps} />
+                <${ExecScript} />
             </section>
             <${ConnectionToolset} />
         </div>
